@@ -417,6 +417,8 @@ Version 1.3.1:
    * max level advancements now raise the advance and post_advance events
    * [effect] can now remove attacks with the remove_attacks key
    * [unstore_unit] can now try to level a unit and does so by default (bug #7426)
+   * [unstore_unit] can no longer unstore a unit with a negative amount of
+     hitpoints. The hitpoints will be set to 1.
  * sound
    * new or revised sounds: morning star, holy magic.
    * add advanced sound tab to pref allowing you to play with sample_rate and
